config/synapse-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: synapse-ingress
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  rules:
  - host: synapse.okonech.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: synapse
            port:
              number: 80
  tls:
  - hosts:
    - nginx-ingress.okonech.net
    secretName: synapse-tls-cert
